# site_ong

./: .dockerignore  Dockerfile  README.md  cli.py  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml
migrations/: env.py
migrations/versions/: 328660bee08f_add_content_to_posts.py  722d3b423c1d_create_posts_table.py  8fdbbac5ea86_create_posts_table.py  d4cfa1f3b14b_create_users_table.py
site_ong/: database.py  main.py  security.py  templates_conf.py
site_ong/auth/: routes.py
site_ong/dashboard/: routes.py
site_ong/posts/: models.py  routes.py
site_ong/static/js/: confirm_delete.js  summernote.js
site_ong/static/styles/: style.css
site_ong/templates/: base.html  blog.html  contato.html  dashboard.html  delete_user.html  edit_post.html  edit_user.html  index.html  login.html  new_post.html  new_user.html  post.html  posts_admin.html  users.html
site_ong/users/: models.py  routes.py
tests/: conftest.py  test_index.py
